db_helpers - WIP

--- a/templates/main.html
+++ b/templates/main.html
@@ -22,7 +22,7 @@
     <div class="container">
 
         <div class="page-header">
-            Oregon Trail
+            {{ projectName }}
             <br>
 
             {% if email == None %}
