--- a/templates/main.html
+++ b/templates/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="/static/css/bootstrap.css">
 
 <!-- jQuery library -->
 <script src="/static/jquery.min.js"></script>
@@ -62,38 +62,6 @@
                       </li>
                     {% endfor %}
 
-                      <!---->
-                    <!--<li class="dropdown">-->
-                      <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
-                      <!--<ul class="dropdown-menu">-->
-                        <!--<li><a href="#">Action</a></li>-->
-                        <!--<li><a href="#">Another action</a></li>-->
-                        <!--<li><a href="#">Something else here</a></li>-->
-                        <!--<li role="separator" class="divider"></li>-->
-                        <!--<li><a href="#">Separated link</a></li>-->
-                        <!--<li role="separator" class="divider"></li>-->
-                        <!--<li><a href="#">One more separated link</a></li>-->
-                      <!--</ul>-->
-                    <!--</li>-->
-                  <!--</ul>-->
-                  <!--<form class="navbar-form navbar-left">-->
-                    <!--<div class="form-group">-->
-                      <!--<input type="text" class="form-control" placeholder="Search">-->
-                    <!--</div>-->
-                    <!--<button type="submit" class="btn btn-default">Submit</button>-->
-                  <!--</form>-->
-                  <!--<ul class="nav navbar-nav navbar-right">-->
-                    <!--<li><a href="#">Link</a></li>-->
-                    <!--<li class="dropdown">-->
-                      <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
-                      <!--<ul class="dropdown-menu">-->
-                        <!--<li><a href="#">Action</a></li>-->
-                        <!--<li><a href="#">Another action</a></li>-->
-                        <!--<li><a href="#">Something else here</a></li>-->
-                        <!--<li role="separator" class="divider"></li>-->
-                        <!--<li><a href="#">Separated link</a></li>-->
-                      <!--</ul>-->
-                    <!--</li>-->
                   </ul>
                 </div><!-- /.navbar-collapse -->
               </div><!-- /.container-fluid -->
