--- a/templates/form.html
+++ b/templates/form.html
@@ -2,15 +2,15 @@
 {% block content %}
 
 <hr>
-<form class="form-vertical" action="/add_content" method="post" enctype = "multipart/form-data">
+<form class="form-vertical" method="post" enctype = "multipart/form-data">
 
 
 	{{ form.hidden_tag() }}
 
-	<table class="grantFormTable">
+	<table class="table table-dark">
 		<tr>
 			<td class="grantFormHeader" colspan="2">
-				<h1>Add Content</h1>
+				<h1>Example</h1>
 			</td>
 		</tr>
 		<tr>
