--- a/templates/form.html
+++ b/templates/form.html
@@ -1,4 +1,4 @@
-{% extends "main.html" %}
+{% extends "base.html" %}
 {% block content %}
 
 <hr>
@@ -10,17 +10,21 @@
 	<table class="table table-dark">
 		<tr>
 			<td class="grantFormHeader" colspan="2">
-				<h1>Example</h1>
+				<h1>Languages</h1>
 			</td>
 		</tr>
-		<tr>
-			<td class="grantFormLabelCell">{{form.name.label(class_="grantFormLabel")}}:</td>
-			<td>{{form.name(class_="form-control")}}</td>
-		</tr>
-		<tr>
-			<td class="grantFormLabelCell">{{form.file.label(class_="grantFormLabel")}}:</td>
-			<td>{{form.file}}</td>
-		</tr>
+		{% for item in form %}
+			{% if "CSRF" not in item.label() and "Submit" not in item.label()%}
+				<tr>
+					<td class="grantFormLabelCell">{{item.label(class_="grantFormLabel")}}:</td>
+					{% if "File" in item.label() %}
+						<td class="form-control">{{item}}</td>
+					{% else %}
+						<td class="form-control">{{item.name}}</td>
+					{% endif %}
+				</tr>
+			{% endif %}
+		{% endfor %}
 
 	</table>
 	{{form.submit(class_="btn btn-primary grantFormSubmit")}}
