--- a/templates/main.html
+++ b/templates/main.html
@@ -84,7 +84,7 @@
         <br>
         <hr>
         <div class="panel-footer">
-            Web Design by <a href="http://www.grant-miller.com">Grant(at)grant-miller.com</a>
+            Web Design by <a href="http://www.grant-miller.com">Grant(at)accountabilityDUDE.com</a>
         </div>
 
     </div>
