--- a/templates/form.html
+++ b/templates/form.html
@@ -8,20 +8,17 @@
 	{{ form.hidden_tag() }}
 
 	<table class="table table-dark">
-		<tr>
-			<td class="grantFormHeader" colspan="2">
-				<h1>Languages</h1>
-			</td>
-		</tr>
 		{% for item in form %}
 			{% if "CSRF" not in item.label() and "Submit" not in item.label() and "Save" not in item.label()%}
 				<tr>
-					<td class="grantFormLabelCell">{{item.label(class_="grantFormLabel")}}:</td>
-					{% if "File" in item.label() %}
-						<td class="form-control">{{item}}</td>
-					{% else %}
-						<td>{{item(class_="form-control")}}</td>
-					{% endif %}
+					<div class="form-group">
+						<td>{{item.label(class_="grantFormLabel")}}:</td>
+						{% if "File" in item.label() %}
+							<td class="form-control">{{item}}</td>
+						{% else %}
+							<td>{{item(class_="form-control")}}</td>
+						{% endif %}
+					</div>
 				</tr>
 			{% endif %}
 		{% endfor %}
