pushing to new vps

--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -16,15 +16,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- //for-mobile-apps -->
-	<link href="static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-	<link href="static/css/style.css" rel="stylesheet" type="text/css" media="all" />
-	<link href="static/css/landing_page.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/style.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/landing_page.css" rel="stylesheet" type="text/css" media="all" />
 	<!-- gallery -->
-	<link type="text/css" rel="stylesheet" href="static/css/cm-overlay.css" />
+	<link type="text/css" rel="stylesheet" href="/cm-overlay.css" />
 
 	<!-- //gallery -->
 	<!-- font-awesome icons -->
-	<link href="static/css/font-awesome.css" rel="stylesheet">
+	<link href="/font-awesome.css" rel="stylesheet">
 
 	<!-- //font-awesome icons -->
 	<!--
@@ -45,7 +45,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- banner -->
 	<div class="banner">
 		<!--Slider-->
-		<img src="/static/images/airport_signage.jpg" style="width: 250px; padding:15px;" alt=" " class="img-responsive"/>
+		<img src="//airport_signage.jpg" style="width: 250px; padding:15px;" alt=" " class="img-responsive"/>
 		<h2>Digital Signage Manager</h2>
 
 		<span>Manage Your Digital Signage Media Players Anywhere</span>
@@ -151,18 +151,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="service-agileits">
 
 			<div class="col-md-4 list-gds text-center">
-				<img src="static/images/raspi.png" height="50"/>
+				<img src="/raspi.png" height="50"/>
 				<h4>Raspberry Pi</h4>
 				<p>Beta</p>
 			</div>
 			<div class="col-md-4 list-gds text-center">
-				<img src="static/images/SMD 202 small.png" height="50"/>
+				<img src="/SMD 202 small.png" height="50"/>
 
 				<h4>Extron SMD 202</h4>
 				<p>*requires a controller. (This can be an Extron IPL/IPCP, a Raspi, or a PC)</p>
 			</div>
 			<div class="col-md-4 list-gds text-center">
-				<img src="static/images/question mark.png" height="50"/>
+				<img src="/question mark.png" height="50"/>
 				<h4>Want More?</h4>
 				<p>If you would like to use a specific player, please send us an email.
 
@@ -185,8 +185,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="agileits_portfolio_grids">
 			<div class="col-md-4 agileits_portfolio_grid">
 				<div class="agileinfo_portfolio_grid hovereffect">
-					<a class="cm-overlay" href="static/images/digital signage 1.jpg">
-						<img src="static/images/digital signage 1.jpg" alt=" " class="img-responsive">
+					<a class="cm-overlay" href="/digital signage 1.jpg">
+						<img src="/digital signage 1.jpg" alt=" " class="img-responsive">
 						<div class="overlay">
 							<!--<h4>Classy Resume</h4>-->
 
@@ -194,42 +194,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</a>
 				</div>
 				<div class="agileinfo_portfolio_grid hovereffect">
-					<a class="cm-overlay" href="static/images/digital signage 2.jpg">
-						<img src="static/images/digital signage 2.jpg" alt=" " class="img-responsive">
+					<a class="cm-overlay" href="/digital signage 2.jpg">
+						<img src="/digital signage 2.jpg" alt=" " class="img-responsive">
 						<div class="overlay">
 
 						</div>
 					</a>
 				</div>
 				<div class="agileinfo_portfolio_grid hovereffect">
-					<a class="cm-overlay" href="static/images/digital signage 3.jpg">
-						<img src="static/images/digital signage 3.jpg" alt=" " class="img-responsive">
-						<div class="overlay">
-
-						</div>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-4 agileits_portfolio_grid">
-				<div class="agileinfo_portfolio_grid hovereffect">
-					<a class="cm-overlay" href="static/images/digital signage 4.jpg">
-						<img src="static/images/digital signage 4.jpg" alt=" " class="img-responsive">
-						<div class="overlay">
-
-						</div>
-					</a>
-				</div>
-				<div class="agileinfo_portfolio_grid hovereffect">
-					<a class="cm-overlay" href="static/images/digital signage 5.jpg">
-						<img src="static/images/digital signage 5.jpg" alt=" " class="img-responsive">
-						<div class="overlay">
-
-						</div>
-					</a>
-				</div>
-				<div class="agileinfo_portfolio_grid hovereffect">
-					<a class="cm-overlay" href="static/images/digital signage 6.jpg">
-						<img src="static/images/digital signage 6.jpg" alt=" " class="img-responsive">
+					<a class="cm-overlay" href="/digital signage 3.jpg">
+						<img src="/digital signage 3.jpg" alt=" " class="img-responsive">
 						<div class="overlay">
 
 						</div>
@@ -238,24 +212,50 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="col-md-4 agileits_portfolio_grid">
 				<div class="agileinfo_portfolio_grid hovereffect">
-					<a class="cm-overlay" href="static/images/digital signage 7.jpg">
-						<img src="static/images/digital signage 7.jpg" alt=" " class="img-responsive">
+					<a class="cm-overlay" href="/digital signage 4.jpg">
+						<img src="/digital signage 4.jpg" alt=" " class="img-responsive">
 						<div class="overlay">
 
 						</div>
 					</a>
 				</div>
 				<div class="agileinfo_portfolio_grid hovereffect">
-					<a class="cm-overlay" href="static/images/digital signage 8.jpg">
-						<img src="static/images/digital signage 8.jpg" alt=" " class="img-responsive">
+					<a class="cm-overlay" href="/digital signage 5.jpg">
+						<img src="/digital signage 5.jpg" alt=" " class="img-responsive">
 						<div class="overlay">
 
 						</div>
 					</a>
 				</div>
 				<div class="agileinfo_portfolio_grid hovereffect">
-					<a class="cm-overlay" href="static/images/digital signage 9.jpg">
-						<img src="static/images/digital signage 9.jpg" alt=" " class="img-responsive">
+					<a class="cm-overlay" href="/digital signage 6.jpg">
+						<img src="/digital signage 6.jpg" alt=" " class="img-responsive">
+						<div class="overlay">
+
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-4 agileits_portfolio_grid">
+				<div class="agileinfo_portfolio_grid hovereffect">
+					<a class="cm-overlay" href="/digital signage 7.jpg">
+						<img src="/digital signage 7.jpg" alt=" " class="img-responsive">
+						<div class="overlay">
+
+						</div>
+					</a>
+				</div>
+				<div class="agileinfo_portfolio_grid hovereffect">
+					<a class="cm-overlay" href="/digital signage 8.jpg">
+						<img src="/digital signage 8.jpg" alt=" " class="img-responsive">
+						<div class="overlay">
+
+						</div>
+					</a>
+				</div>
+				<div class="agileinfo_portfolio_grid hovereffect">
+					<a class="cm-overlay" href="/digital signage 9.jpg">
+						<img src="/digital signage 9.jpg" alt=" " class="img-responsive">
 						<div class="overlay">
 
 						</div>
@@ -372,10 +372,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 </div>
 <!-- //footer -->
-<script src="static/js/jquery-2.2.3.min.js"></script>
+<script src="/jquery-2.2.3.min.js"></script>
 <!-- skills -->
-<script src="static/js/pie-chart.js" type="text/javascript"></script>
-<script src="static/js/landing_page.js" type="text/javascript"></script>
+<script src="/pie-chart.js" type="text/javascript"></script>
+<script src="/landing_page.js" type="text/javascript"></script>
 <script type="text/javascript">
 
         $(document).ready(function () {
@@ -421,7 +421,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         });
     </script>
 <!-- skills -->
-<script src="static/js/responsiveslides.min.js"></script>
+<script src="/responsiveslides.min.js"></script>
 <script>
 								// You can also use "$(window).load(function() {"
 								$(function () {
@@ -443,9 +443,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								});
 							 </script>
 <!-- js -->
-<script src="static/js/jquery.tools.min.js"></script>
-<script src="static/js/jquery.mobile.custom.min.js"></script>
-<script src="static/js/jquery.cm-overlay.js"></script>
+<script src="/jquery.tools.min.js"></script>
+<script src="/jquery.mobile.custom.min.js"></script>
+<script src="/jquery.cm-overlay.js"></script>
 <script>
 					$(document).ready(function(){
 						$('.cm-overlay').cmOverlay();
@@ -455,11 +455,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 
 
-<script src="static/js/bars.js"></script>
+<script src="/bars.js"></script>
 
 <!-- start-smoth-scrolling -->
-<script type="text/javascript" src="static/js/move-top.js"></script>
-<script type="text/javascript" src="static/js/easing.js"></script>
+<script type="text/javascript" src="/move-top.js"></script>
+<script type="text/javascript" src="/easing.js"></script>
 <script type="text/javascript">
 	jQuery(document).ready(function($) {
 		$(".scroll").click(function(event){
@@ -471,7 +471,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- start-smoth-scrolling -->
 
 <!-- //js -->
-<script src="static/js/bootstrap.js"></script>
+<script src="/bootstrap.js"></script>
 <!-- //for bootstrap working -->
 <!-- here stars scrolling icon -->
 <script type="text/javascript">
