--- a/templates/main.html
+++ b/templates/main.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="/static/css/bootstrap.css">
+<link rel="stylesheet" href="//bootstrap.css">
 
 <!-- jQuery library -->
-<script src="/static/js/jquery-2.1.4.min.js"></script>
+<script src="//jquery-2.1.4.min.js"></script>
 
 <!-- Latest compiled JavaScript -->
-<script src="/static/js/bootstrap.js"></script>
+<script src="//bootstrap.js"></script>
 
     <head>
         <meta charset="UTF-8">
